[tool.poetry]
name = "sodym"
version = "0.1.0"
description = ""
authors = ["Jakob Dürrwächter, Merlin Hosak, Stefan Pauliuk"]
readme = "README.md"
packages = [{include = "sodym"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.7.1"
numpy = "^1.25.0"
scipy = "^1.11.0"
PyYAML = "^6.0"
pandas = "^2.0.2"
pickle4 = "^0.0.1"
plotly = "^5.18.0"
pydantic = "^2.8.2"
ruff = "^0.5.6"
docformatter = "^1.7.5"
einops = "0.8.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
polyfactory = "^2.16.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.0"
sphinx-pydantic = "^0.1.1"
autodoc-pydantic = "^2.2.0"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"